# rust-websocket-chat

./: Cargo.toml  Dockerfile  README.md  rustfmt.toml
src/: app_state.rs  main.rs  routers.rs
src/routers/: chat.rs  login.rs  rooms.rs
src/templates/: chat.html
